# muzero-decoder

./: .gitignore  README.md
cfg/: atari_breakout.cfg  atari_ms_pacman.cfg  atari_pong.cfg  go.cfg  gomoku.cfg
minizero/actor/: mcts_dump.cpp  mcts_dump.h  zero_actor.cpp  zero_actor.h
minizero/config/: configuration.cpp  configuration.h
minizero/console/: CMakeLists.txt  decoder_dump.cpp  decoder_dump.h  mode_handler.cpp  mode_handler.h
minizero/environment/atari/: atari.h
minizero/environment/base/: base_env.h
minizero/learner/: data_loader.cpp  pybind.cpp  train.py
minizero/network/: muzero_network.h  network.cpp  network.h
minizero/network/py/: create_network.py  muzero_atari_network.py  muzero_network.py
minizero/utils/: decoder_visualization_utils.py
scripts/: analyze-unroll.sh  dump-mcts.sh  train.sh
tools/: decoder_tool.py  plot_board.py  png-to-video.py  recreate_model.py  run-selfplay.sh  unroll_plot_tool.py  visualize-tree.py
